# continuous_futures

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/continuous_futures/: __init__.py  continuous_futures.py
tests/: test_continuous.py  test_documentation.py  test_rollover_indexes.py
