[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "continuous_futures"
version = "0.0.1"
authors = [
  { name="Felix Steiner", email="f@fxstr.com" },
]
description = "Converts single future contracts to a continuous contract (ratio back-adjusted)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"